--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -592,8 +592,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/A1_3x3"
-        app:layout_constraintTop_toBottomOf="@+id/B1_3x3"
-        app:backgroundTint="#000000" />
+        app:layout_constraintTop_toBottomOf="@+id/B1_3x3" />
 
     <Button
         android:id="@+id/back"
@@ -610,8 +609,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/C1_3x3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/B1_3x3"
-        app:backgroundTint="#000000" />
+        app:layout_constraintTop_toBottomOf="@+id/B1_3x3" />
 
     <TextView
         android:id="@+id/status"
@@ -629,8 +627,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Game Name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#000000"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/boardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
