--- a/app/src/main/res/layout/activity_how_to_play.xml
+++ b/app/src/main/res/layout/activity_how_to_play.xml
@@ -12,11 +12,10 @@
         android:id="@+id/howToPlayTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="35sp"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
         android:text="Como Jogar"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#000000" />
+        android:textSize="34sp" />
 
     <TextView
         android:id="@+id/gameSpinnerLabel"
@@ -24,8 +23,7 @@
         android:layout_height="wrap_content"
         android:labelFor="@id/gameSpinner"
         android:gravity="center_horizontal|center_vertical"
-        android:textColor="#000000"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="5dp"
         android:textSize="20sp"
         android:text="Selecionar Jogo:" />
 
@@ -33,7 +31,7 @@
         android:id="@+id/gameSpinner"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30sp"
+        android:layout_marginBottom="20dp"
         android:contentDescription="Seletor de Jogos"
         android:minHeight="48dp"
         android:textSize="20sp" />
@@ -42,21 +40,19 @@
         android:id="@+id/gameRules"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20sp"
-        android:layout_marginLeft="20sp"
-        android:layout_marginEnd="20sp"
-        android:layout_marginRight="20sp"
-        android:layout_marginBottom="20sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="regras"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="#000000"
         android:text="Voltar"
         android:textSize="20sp" />
 
