--- a/app/src/main/res/layout/activity_pre_game.xml
+++ b/app/src/main/res/layout/activity_pre_game.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:labelFor="@id/gameSpinner"
         android:gravity="center_horizontal|center_vertical"
-        android:textColor="#000000"
-        android:layout_marginBottom="10sp"
+        android:layout_marginBottom="5dp"
         android:textSize="20sp"
         android:text="Selecionar Jogo:" />
 
@@ -23,7 +22,7 @@
         android:id="@+id/gameSpinner"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100sp"
+        android:layout_marginBottom="50dp"
         android:contentDescription="Seletor de Jogos"
         android:minHeight="48dp"
         android:textSize="20sp" />
@@ -32,7 +31,7 @@
         android:id="@+id/difficultyChooser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100sp"
+        android:layout_marginBottom="50dp"
         android:checkedButton="@id/radioEasy"
         android:contentDescription="Dificuldades"
         android:orientation="horizontal">
@@ -41,8 +40,7 @@
             android:id="@+id/radioEasy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10sp"
-            app:buttonTint="#000000"
+            android:layout_marginRight="10dp"
             android:text="Fácil"
             android:textSize="20sp" />
 
@@ -50,8 +48,7 @@
             android:id="@+id/radioMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10sp"
-            app:buttonTint="#000000"
+            android:layout_marginRight="10dp"
             android:text="Médio"
             android:textSize="20sp" />
 
@@ -59,7 +56,6 @@
             android:id="@+id/radioHard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:buttonTint="#000000"
             android:text="Difícil"
             android:textSize="20sp" />
 
@@ -70,7 +66,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jogar"
-        android:textSize="20sp"
-        app:backgroundTint="#000000" />
+        android:textSize="20sp" />
 
 </LinearLayout>
