feat: add buttons

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -2,20 +2,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-                                               xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   tools:context=".GameActivity">
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".GameActivity">
 
-    <com.marcoantonioaav.lobogames.ui.BoardView
-            android:id="@+id/boardView"
-            android:layout_width="390dp"
-            android:layout_height="390dp"
+    <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:visibility="visible"
-    />
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/buttonsLayout">
+        <com.marcoantonioaav.lobogames.ui.BoardView
+                android:id="@+id/boardView"
+                android:layout_width="390dp"
+                android:layout_height="390dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" android:visibility="visible"
+        />
+    </RelativeLayout>
 
 
     <Button
@@ -55,7 +64,7 @@
             android:layout_height="wrap_content"
             android:text="status"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/boardView"
+            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gameName"/>
@@ -66,7 +75,7 @@
             android:layout_height="wrap_content"
             android:text="Game Name"
             android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/boardView"
+            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
