--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -26,10 +26,27 @@
         />
     </RelativeLayout>
 
+    <Button
+            android:id="@+id/replay"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:contentDescription="Visualizar Replay"
+            android:paddingLeft="12dp"
+            android:paddingTop="2dp"
+            android:paddingRight="12dp"
+            android:paddingBottom="2dp"
+            android:text="Visualizar\nReplay"
+            android:textSize="16sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/back"
+            android:layout_marginBottom="64dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+    />
 
     <Button
             android:id="@+id/playAgain"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:contentDescription="Recomeçar jogo"
             android:paddingLeft="12dp"
@@ -44,7 +61,7 @@
 
     <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:contentDescription="Voltar ao menu"
             android:paddingLeft="12dp"
