--- a/app/src/main/res/layout/activity_pre_board.xml
+++ b/app/src/main/res/layout/activity_pre_board.xml
@@ -15,14 +15,14 @@
             android:gravity="center_horizontal|center_vertical"
             android:layout_marginBottom="5dp"
             android:textSize="20sp"
-            android:text="Selecionar Jogo:" />
+            android:text="Selecionar Tabuleiro:" />
 
     <Spinner
             android:id="@+id/gameSpinner"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
-            android:contentDescription="Seletor de Jogos"
+            android:contentDescription="Seletor de Tabuleiros"
             android:minHeight="48dp"
             android:textSize="20sp" />
 
