--- a/app/src/main/res/layout/activity_pre_board.xml
+++ b/app/src/main/res/layout/activity_pre_board.xml
@@ -9,39 +9,59 @@
 
 
     <TextView
-            android:id="@+id/gameSpinnerLabel"
+            android:id="@+id/listViewLabel"
+            android:paddingTop="40dp"
+            android:paddingBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:labelFor="@id/gameSpinner"
+            android:layout_weight="0"
+            android:labelFor="@id/listView"
             android:gravity="center_horizontal|center_vertical"
             android:layout_marginBottom="5dp"
             android:textSize="20sp"
-            android:text="Selecionar Tabuleiro:" />
+            android:text="Selecionar Tabuleiro:"/>
 
-    <Spinner
-            android:id="@+id/gameSpinner"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:contentDescription="Seletor de Tabuleiros"
-            android:minHeight="48dp"
-            android:textSize="20sp" />
-
-    <Button
-            android:id="@+id/play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Jogar"
-            android:textSize="20sp"
-            android:layout_marginBottom="20dp"
+    <ListView
+            android:id="@+id/listView"
+            android:padding="20dp"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="100"
+            android:divider="#000"
+            android:dividerHeight="1dp"
+            android:listSelector="#0f0"
+            android:footerDividersEnabled="true"
+            android:headerDividersEnabled="true"
     />
 
-    <Button
-            android:id="@+id/importBoard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Importar Tabuleiro"
-            android:textSize="20sp"
-    />
+    <LinearLayout
+        android:paddingTop="20dp"
+        android:paddingBottom="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="vertical"
+
+    >
+        <Button
+                android:id="@+id/play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Jogar"
+                android:textSize="20sp"
+                android:layout_marginBottom="20dp"
+        />
+
+        <Button
+                android:id="@+id/importBoard"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:text="Importar Tabuleiro"
+                android:textSize="20sp"
+        />
+    </LinearLayout>
+
+
 
 </LinearLayout>
