feat: redesign game select

--- a/app/src/main/res/layout/activity_pre_board.xml
+++ b/app/src/main/res/layout/activity_pre_board.xml
@@ -9,20 +9,20 @@
 
 
     <TextView
-            android:id="@+id/listViewLabel"
+            android:id="@+id/boardListLabel"
             android:paddingTop="40dp"
-            android:paddingBottom="20dp"
+            android:paddingBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:labelFor="@id/listView"
+            android:labelFor="@id/boardList"
             android:gravity="center_horizontal|center_vertical"
             android:layout_marginBottom="5dp"
             android:textSize="20sp"
             android:text="Selecionar Tabuleiro:"/>
 
     <ListView
-            android:id="@+id/listView"
+            android:id="@+id/boardList"
             android:padding="20dp"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
