--- a/app/src/main/res/layout/activity_pre_game.xml
+++ b/app/src/main/res/layout/activity_pre_game.xml
@@ -9,40 +9,40 @@
     tools:context=".PreGameActivity">
 
     <TextView
-        android:id="@+id/gameSpinnerLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:labelFor="@id/gameSpinner"
-        android:gravity="center_horizontal|center_vertical"
-        android:layout_marginBottom="5dp"
-        android:textSize="20sp"
-        android:text="Selecionar Jogo:" />
+            android:id="@+id/gameListViewLabel"
+            android:paddingTop="40dp"
+            android:paddingBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:labelFor="@id/boardList"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_marginBottom="5dp"
+            android:textSize="20sp"
+            android:text="Selecionar Jogo:"/>
 
-    <Spinner
-        android:id="@+id/gameSpinner"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:contentDescription="Seletor de Jogos"
-        android:minHeight="48dp"
-        android:textSize="20sp" />
+    <ListView
+            android:id="@+id/gameListView"
+            android:padding="20dp"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="100"
+            android:divider="#000"
+            android:dividerHeight="1dp"
+            android:listSelector="#0f0"
+            android:footerDividersEnabled="true"
+            android:headerDividersEnabled="true"
+    />
 
     <RadioGroup
             android:id="@+id/numberOfPlayersChooser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:checkedButton="@id/radioMultiplayer"
+            android:layout_weight="0"
+            android:layout_marginBottom="10dp"
+            android:checkedButton="@id/radioSingleplayer"
             android:contentDescription="Número de Jogadores"
             android:orientation="horizontal">
-
-        <RadioButton
-                android:id="@+id/radioMultiplayer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:text="Multijogador"
-                android:textSize="20sp" />
 
         <RadioButton
                 android:id="@+id/radioSingleplayer"
@@ -51,6 +51,14 @@
                 android:layout_marginRight="10dp"
                 android:text="Um jogador"
                 android:textSize="20sp" />
+
+        <RadioButton
+                android:id="@+id/radioMultiplayer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="Multijogador"
+                android:textSize="20sp" />
     </RadioGroup>
 
 
@@ -58,7 +66,8 @@
         android:id="@+id/difficultyChooser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_weight="0"
+        android:layout_marginBottom="20dp"
         android:checkedButton="@id/radioEasy"
         android:contentDescription="Dificuldades"
         android:orientation="horizontal">
@@ -92,6 +101,8 @@
         android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:layout_marginBottom="40dp"
         android:text="Jogar"
         android:textSize="20sp" />
 
