--- a/app/src/main/res/layout/activity_pre_board.xml
+++ b/app/src/main/res/layout/activity_pre_board.xml
@@ -19,7 +19,9 @@
             android:gravity="center_horizontal|center_vertical"
             android:layout_marginBottom="5dp"
             android:textSize="20sp"
-            android:text="Selecionar Tabuleiro:"/>
+            android:text="Selecionar Tabuleiro:"
+            android:textStyle="bold"
+    />
 
     <ListView
             android:id="@+id/boardList"
