--- a/app/src/main/res/layout/activity_replay.xml
+++ b/app/src/main/res/layout/activity_replay.xml
@@ -19,7 +19,22 @@
             android:gravity="center_horizontal|center_vertical"
             android:layout_marginBottom="5dp"
             android:textSize="20sp"
-            android:text="Selecionar Replay:"/>
+            android:text="Selecionar Replay:"
+            android:textStyle="bold"
+    />
+
+    <TextView
+            android:id="@+id/replayEmptyState"
+            android:paddingTop="80dp"
+            android:paddingBottom="10dp"
+            android:paddingHorizontal="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_marginBottom="5dp"
+            android:textSize="20sp"
+            android:text="Importe ou salve um replay para vê-los aqui."/>
 
     <ListView
             android:id="@+id/replayList"
