feat: some progress but not working

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,100 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".GameActivity">
-
-    <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/buttonsLayout">
-        <com.marcoantonioaav.lobogames.ui.BoardView
-                android:id="@+id/boardView"
-                android:layout_width="390dp"
-                android:layout_height="390dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" android:visibility="visible"
-        />
-    </RelativeLayout>
-
-    <Button
-            android:id="@+id/replay"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="Visualizar Replay"
-            android:paddingLeft="12dp"
-            android:paddingTop="2dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="2dp"
-            android:text="Visualizar\nReplay"
-            android:textSize="16sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/back"
-            android:layout_marginBottom="64dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
-
-    <Button
-            android:id="@+id/playAgain"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="Recomeçar jogo"
-            android:paddingLeft="12dp"
-            android:paddingTop="2dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="2dp"
-            android:text="Recomeçar\nJogo"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="24dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/back" app:layout_constraintHorizontal_bias="0.5"/>
-
-    <Button
-            android:id="@+id/back"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="Voltar ao menu"
-            android:paddingLeft="12dp"
-            android:paddingTop="2dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="2dp"
-            android:text="Voltar\nao menu"
-            android:textSize="16sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="24dp" app:layout_constraintEnd_toStartOf="@+id/playAgain"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
-
-    <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="status"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameName"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal|center_vertical"
+              android:orientation="vertical"
+              tools:context=".GameActivity">
 
     <TextView
             android:id="@+id/gameName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Game Name"
-            android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:textSize="24sp"
+            android:paddingTop="30dp"
+            android:layout_weight="0"
+    />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="status"
+            android:textSize="20sp"
+            android:paddingVertical="10dp"
+            android:layout_weight="0"
+    />
+
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="100"
+            android:id="@+id/buttonsLayout"
+    >
+        <com.marcoantonioaav.lobogames.ui.BoardView
+                android:id="@+id/boardView"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="#FF00FF00"
+        />
+    </RelativeLayout>
+
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:visibility="gone"
+    >
+        <Button
+                android:id="@+id/replay"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="Visualizar Replay"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="2dp"
+                android:text="Visualizar\nReplay"
+                android:textSize="16sp"
+                android:visibility="visible"
+        />
+
+        <Button
+                android:id="@+id/replayTest"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="Salvar Replay"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="2dp"
+                android:text="Salvar\nReplay"
+                android:textSize="16sp"
+                android:visibility="visible"
+        />
+    </LinearLayout>
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:visibility="gone"
+
+    >
+        <Button
+
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="Visualizar Replay"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="2dp"
+                android:text="Visualizar\nReplay"
+                android:textSize="16sp"
+                android:visibility="visible"
+        />
+
+        <Button
+
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="Salvar Replay"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="2dp"
+                android:text="Salvar\nReplay"
+                android:textSize="16sp"
+                android:visibility="visible"
+        />
+    </LinearLayout>
+
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:visibility="gone"
+
+    >
+        <Button
+                android:id="@+id/playAgain"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="Recomeçar jogo"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="2dp"
+                android:text="Recomeçar\nJogo"
+                android:textSize="16sp"
+                android:layout_marginBottom="24dp"
+        />
+
+        <Button
+                android:id="@+id/back"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="Voltar ao menu"
+                android:paddingLeft="12dp"
+                android:paddingTop="2dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="2dp"
+                android:text="Voltar\nao menu"
+                android:textSize="16sp"
+                android:visibility="visible"
+                android:layout_marginBottom="24dp"
+        />
+    </LinearLayout>
+
+</LinearLayout>
